<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNomeRa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="30dp"
        android:text="@string/nome_ra"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etBit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeRa" />

    <EditText
        android:id="@+id/etBit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/bit"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/bntCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBit">

        <RadioButton
            android:id="@+id/rbBytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bytes" />

        <RadioButton
            android:id="@+id/rbKb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kb" />

        <RadioButton
            android:id="@+id/rbMb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mb" />

        <RadioButton
            android:id="@+id/rbGb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gb" />

        <RadioButton
            android:id="@+id/rbTb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tb" />
    </RadioGroup>

    <Button
        android:id="@+id/bntCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="27dp"
        android:text="@string/calc"
        app:layout_constraintBottom_toTopOf="@+id/tvRes"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="211dp"
        android:layout_height="0dp"
        android:layout_marginBottom="134dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntCalc" />
</androidx.constraintlayout.widget.ConstraintLayout>